--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.49.10",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.49.10",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
